# FEDDLib

./: .clang-format  .gitignore  CMakeLists.txt  FEDDLib_Config.h.in  PackagesList.cmake  ProjectName.cmake  README.md  TPLsList.cmake  test.cpp
.github/actions/tester-action/: Dockerfile  action.yml  run-tests.sh
.github/actions/tester-action/configure/: do-configure-trilinos.sh
.github/workflows/: linter.yml  main.yml  tester.yml
cmake/TPLs/: FindTPLAceGENInterface.cmake
feddlib/amr/: CMakeLists.txt
feddlib/amr/cmake/: Dependencies.cmake
feddlib/core/: CMakeLists.txt
feddlib/core/AceFemAssembly/: AssembleFEFactory_decl.hpp  AssembleFEFactory_def.hpp
feddlib/core/AceFemAssembly/specific/: AssembleFENonLinLaplace_decl.hpp  AssembleFENonLinLaplace_def.hpp  AssembleFE_NonLinElas2D.cpp  AssembleFE_NonLinElas2D.hpp  AssembleFE_NonLinElas2D_decl.hpp  AssembleFE_NonLinElas2D_def.hpp  AssembleFE_SCI_NH_def.hpp  AssembleFE_SCI_SMC_Active_Growth_Reorientation_def.hpp  CMakeLists.txt
feddlib/core/AceFemAssembly/tests/: fe_test_SCI.cpp
feddlib/core/FE/: Domain_decl.hpp  Domain_def.hpp  EdgeElements.cpp  FE_decl.hpp  FE_def.hpp  Helper.cpp  Helper.hpp
feddlib/core/General/: BCBuilder_decl.hpp  BCBuilder_def.hpp
feddlib/core/LinearAlgebra/: BlockMap_decl.hpp  BlockMap_def.hpp  Map_def.hpp  MultiVector_decl.hpp  MultiVector_def.hpp
feddlib/core/Mesh/: CMakeLists.txt  MeshPartitioner_decl.hpp  MeshPartitioner_def.hpp  MeshStructured_def.hpp  MeshUnstructured_decl.hpp  Mesh_decl.hpp  Mesh_def.hpp
feddlib/core/Mesh/tests/: CMakeLists.txt  dual_graph_partitioning_stack.cpp
feddlib/core/Utils/: FEDDUtils.hpp
feddlib/core/cmake/: Dependencies.cmake
feddlib/problems/: CMakeLists.txt
feddlib/problems/Solver/: ASPENOverlappingOperator.cpp  ASPENOverlappingOperator.hpp  ASPENOverlappingOperator_decl.hpp  ASPENOverlappingOperator_def.hpp  CMakeLists.txt  CoarseNonLinearSchwarzOperator.cpp  CoarseNonLinearSchwarzOperator_decl.hpp  CoarseNonLinearSchwarzOperator_def.hpp  LinearSolver_def.hpp  NonLinearSchwarzOperator.cpp  NonLinearSchwarzOperator.hpp  NonLinearSchwarzOperator_decl.hpp  NonLinearSchwarzOperator_def.hpp  NonLinearSolver_decl.hpp  NonLinearSolver_def.hpp  SimpleOverlappingOperator.hpp  SimpleOverlappingOperator_decl.hpp  SimpleOverlappingOperator_def.hpp
feddlib/problems/Solver/NonLinearSchwarzSolver/: CMakeLists.txt  CoarseNonLinearSchwarzOperator.hpp  CoarseNonLinearSchwarzOperator_decl.hpp  CoarseNonLinearSchwarzOperator_def.hpp  CombineOperator.cpp  CombineOperator.hpp  CombineOperator_decl.hpp  CombineOperator_def.hpp  H1Operator.cpp  H1Operator.hpp  H1Operator_decl.hpp  H1Operator_def.hpp  NonLinearCombineOperator.cpp  NonLinearCombineOperator.hpp  NonLinearCombineOperator_decl.hpp  NonLinearCombineOperator_def.hpp  NonLinearH1Operator.cpp  NonLinearH1Operator.hpp  NonLinearH1Operator_decl.hpp  NonLinearH1Operator_def.hpp  NonLinearOperator.cpp  NonLinearOperator.hpp  NonLinearOperator_decl.hpp  NonLinearOperator_def.hpp  NonLinearSchwarzOperator_decl.hpp  NonLinearSchwarzOperator_def.hpp  NonLinearSumOperator.cpp  NonLinearSumOperator.hpp  NonLinearSumOperator_decl.hpp  NonLinearSumOperator_def.hpp  SimpleCoarseOperator.cpp  SimpleCoarseOperator.hpp  SimpleCoarseOperator_decl.hpp  SimpleCoarseOperator_def.hpp  SimpleOverlappingOperator.cpp  SimpleOverlappingOperator.hpp  SimpleOverlappingOperator_decl.hpp  SimpleOverlappingOperator_def.hpp  SumOperator.cpp  SumOperator.hpp  (+2 more)
feddlib/problems/abstract/: NonLinearProblem_decl.hpp  NonLinearProblem_def.hpp  Problem_decl.hpp  Problem_def.hpp
feddlib/problems/cmake/: Dependencies.cmake
feddlib/problems/examples/: CMakeLists.txt
feddlib/problems/examples/importAndExport/: CMakeLists.txt  main.cpp
feddlib/problems/examples/nonLinElasWithNonLinSchwarz/: CMakeLists.txt  main.cpp  parametersProblem.xml  parametersSolverNonLinSchwarz.xml
feddlib/problems/examples/nonLinElasticity/: CMakeLists.txt  main.cpp  parametersPrec.xml  parametersProblem.xml
feddlib/problems/examples/steadyNonLinElasWithNonLinSchwarz/: CMakeLists.txt  main.cpp  parametersProblem.xml  parametersSolverNonLinSchwarz.xml
feddlib/problems/specific/: NavierStokes_decl.hpp  NavierStokes_def.hpp  NonLinElasAssFE_decl.hpp  NonLinElasAssFE_def.hpp  NonLinElasticity_decl.hpp  NonLinElasticity_def.hpp  NonLinLapAssFE.cpp  NonLinLapAssFE.hpp  NonLinLapAssFE_decl.hpp  NonLinLapAssFE_def.hpp  NonLinLaplace_decl.hpp  NonLinLaplace_def.hpp
feddlib/problems/tests/: CMakeLists.txt
feddlib/problems/tests/nonLinLaplace/: CMakeLists.txt  main.cpp  parametersPrec.xml  parametersProblem.xml
feddlib/problems/tests/nonLinLaplaceAssFE/: CMakeLists.txt  main.cpp  parametersProblem.xml
feddlib/problems/tests/nonLinSchwarz/: CMakeLists.txt  main.cpp  parametersPrec.xml  parametersProblem.xml  parametersSolver.xml
feddlib/problems/tests/steadyLDC/: CMakeLists.txt  main.cpp  parametersPrec.xml  parametersProblem.xml  parametersSolver.xml
feddlib/problems/tests/steadyLDCSchwarz/: CMakeLists.txt  main.cpp  parametersProblem.xml  parametersSolverNonLinSchwarz.xml
feddlib/problems/tests/steadyNavierStokesAssFE/: main.cpp
feddlib/problems/tests/steadyNonLinElasAssFE2D/: CMakeLists.txt  main.cpp  parametersPrec.xml  parametersProblem.xml
feddlib/problems/tests/steadyNonLinElasWithNonLinSchwarz/: CMakeLists.txt  main.cpp  parametersProblem.xml  parametersSolverNonLinSchwarz.xml
meshes/: beam2D.mesh  beam2D100.mesh  beam2D26k.mesh  beam2D59k.mesh  large_square.mesh  simple_square.mesh  square_10k.mesh  square_2500.mesh  square_900.mesh
meshes/geoFiles/simple_geometries/: rectangle.geo  square.geo
sampleConfigureScripts/: configure_mac.sh  configure_mac_.sh
